<resources>
    <string name="app_name">Ticket</string>
    <string name="app_under_title">Display public transport ticket</string>
    <string name="app_version">1.2 (08.01.2018)</string>
    <string name="app_licence">This App is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.</string>
    <string name="app_foss">Ticket uses following libraries:\n\n• NoNonsense-FilePicker\nMozilla Public License Version 2.0\nhttps://github.com/spacecowboy/NoNonsense-FilePicker/blob/master/LICENSE\n\n• ImageCropper\nApache License, Version 2.0\nhttps://github.com/ArthurHub/Android-Image-Cropper\n\n• Pdfium\nApache License, Version 2.0\nhttps://github.com/barteksc/PdfiumAndroid"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="dialog_open_with">Open with</string>

    <string name="msg_added_ticket">Added ticket</string>
    <string name="msg_add_ticket">Choose a ticket to be displayed</string>

    <string name="error_open_pdf">Failed to open Pdf file</string>
    <string name="error_saving_image">Failed to save the image</string>
    <string name="error_saving_pdf">Failed to save the Pdf file</string>
    <string name="error_crop_image">Failed to start crop image process</string>
    <string name="error_open_file">Failed to open selected pdf file</string>
    <string name="error_permission">Please grant permission to select a file</string>

    <string name="dialog_version">Version</string>
    <string name="dialog_developer">Developed by</string>

    <string name="menu_open_pdf">Open Pdf file</string>
</resources>
