<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.design.tri.ticket.AboutActivity"
    android:layout_height="wrap_content">


    <TextView
        android:text="@string/app_under_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:id="@+id/txt_app_title"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="normal|bold"
        android:paddingBottom="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="textStart" />

    <TextView
        android:text="Tim F. Rieck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_dev_descp"
        android:layout_below="@+id/txt_version_descp"
        android:layout_alignStart="@+id/txt_version_descp"
        android:onClick="openCredits" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="382dp"
        android:layout_marginBottom="105dp"
        android:id="@+id/textView11" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dev_descp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/app_licence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_licence"
                android:textAlignment="viewStart"
                android:paddingBottom="10dp"
                android:onClick="openGPLv3" />

            <TextView
                android:text="@string/app_foss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_foss"
                android:textAlignment="viewStart" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:text="@string/dialog_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_dev"
        android:layout_below="@+id/txt_version"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/dialog_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_version"
        android:layout_below="@+id/txt_app_title"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_version_descp"
        android:text="@string/app_version"
        android:layout_below="@+id/txt_app_title"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="58dp" />

</RelativeLayout>
